# Scouty-Boy

./: README.md  Reference_material.txt
Simulation/devel/: .catkin  local_setup.sh  setup.bash
hector_quadrotor_tutorial/: end_sim.sh  run_sim.sh
hector_quadrotor_tutorial/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
hector_quadrotor_tutorial/devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
hector_quadrotor_tutorial/devel/include/hector_uav_msgs/: Altimeter.h  Compass.h  ControllerState.h  EnableMotorsRequest.h  EnableMotorsResponse.h  HeadingCommand.h  LandingAction.h  LandingActionFeedback.h  LandingActionResult.h  LandingGoal.h  LandingResult.h  MotorCommand.h  MotorPWM.h  MotorStatus.h  PoseAction.h  PoseActionFeedback.h  PoseActionGoal.h  PoseActionResult.h  PoseFeedback.h  PoseGoal.h  RC.h  RawImu.h  RawMagnetic.h  RuddersCommand.h  Supply.h  TakeoffAction.h  TakeoffActionFeedback.h  TakeoffActionGoal.h  TakeoffActionResult.h  TakeoffFeedback.h  ThrustCommand.h  VelocityXYCommand.h  YawrateCommand.h
hector_quadrotor_tutorial/devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
hector_quadrotor_tutorial/devel/lib/hector_map_server/: hector_map_server
hector_quadrotor_tutorial/devel/lib/hector_pose_estimation/: pose_estimation
hector_quadrotor_tutorial/devel/lib/hector_quadrotor_actions/: landing_action  pose_action  takeoff_action
hector_quadrotor_tutorial/devel/lib/hector_quadrotor_pose_estimation/: hector_quadrotor_pose_estimation
hector_quadrotor_tutorial/devel/lib/hector_trajectory_server/: hector_trajectory_server
hector_quadrotor_tutorial/devel/lib/main_controller/: main_controller_node
hector_quadrotor_tutorial/devel/lib/message_to_tf/: message_to_tf
hector_quadrotor_tutorial/devel/lib/pkgconfig/: hector_components_description.pc  hector_compressed_map_transport.pc  hector_gazebo_plugins.pc  hector_gazebo_worlds.pc  hector_geotiff.pc  hector_geotiff_plugins.pc  hector_imu_tools.pc  hector_nav_msgs.pc  hector_pose_estimation.pc  hector_pose_estimation_core.pc  hector_quadrotor_actions.pc  hector_quadrotor_controller_gazebo.pc  hector_quadrotor_controllers.pc  hector_quadrotor_demo.pc  hector_quadrotor_description.pc  hector_quadrotor_gazebo.pc  hector_quadrotor_interface.pc  hector_quadrotor_model.pc  hector_quadrotor_pose_estimation.pc  hector_quadrotor_teleop.pc  hector_slam_launch.pc  hector_trajectory_server.pc  hector_uav_msgs.pc  main_controller.pc
hector_quadrotor_tutorial/devel/share/hector_gazebo_plugins/cmake/: hector_gazebo_pluginsConfig.cmake
hector_quadrotor_tutorial/devel/share/hector_gazebo_thermal_camera/cmake/: hector_gazebo_thermal_cameraConfig.cmake
hector_quadrotor_tutorial/devel/share/hector_gazebo_worlds/cmake/: hector_gazebo_worldsConfig.cmake
hector_quadrotor_tutorial/devel/share/hector_geotiff/cmake/: hector_geotiffConfig.cmake
hector_quadrotor_tutorial/devel/share/hector_geotiff_plugins/cmake/: hector_geotiff_pluginsConfig.cmake
hector_quadrotor_tutorial/devel/share/hector_imu_attitude_to_tf/cmake/: hector_imu_attitude_to_tfConfig.cmake
hector_quadrotor_tutorial/src/: .rosinstall
hector_quadrotor_tutorial/src/hector_quadrotor/hector_quadrotor_actions/: .CMakeLists.txt.swp
hector_quadrotor_tutorial/src/hector_quadrotor/main_controller/: .CMakeLists.txt.swp  CMakeLists.txt
hector_quadrotor_tutorial/src/hector_quadrotor/main_controller/src/: .main_controller.cpp.swp  main_controller.cpp
hector_quadrotor_tutorial_new/devel/include/hector_uav_msgs/: AttitudeCommand.h  HeightCommand.h  LandingActionGoal.h  LandingFeedback.h  PoseResult.h  PositionXYCommand.h  RawRC.h  ServoCommand.h  TakeoffGoal.h  TakeoffResult.h  VelocityZCommand.h
hector_quadrotor_tutorial_new/devel/lib/hector_compressed_map_transport/: map_to_image_node
hector_quadrotor_tutorial_new/devel/lib/hector_quadrotor_teleop/: quadrotor_teleop
hector_quadrotor_tutorial_new/devel/lib/main_controller/: main_controller_node
hector_quadrotor_tutorial_new/devel/lib/pkgconfig/: hector_gazebo_thermal_camera.pc  hector_imu_attitude_to_tf.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_quadrotor_gazebo_plugins.pc  hector_sensors_description.pc  hector_xacro_tools.pc  message_to_tf.pc
hector_quadrotor_tutorial_new/src/hector_quadrotor/hector_quadrotor_teleop/: .CMakeLists.txt.swp
(+45 files in other folders)
